--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
             "email": "reece.alexander@gmail.com"
         }
     ],
+    "require": {
+        "php": "^8"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "symplify/easy-coding-standard": "^11.1",
